task edit and task details controllers and view files added

--- a/public/app/views/task.html
+++ b/public/app/views/task.html
@@ -1,4 +1,4 @@
-Task List
+Task Detail
 <table class="table">
     <thead>
     <tr>
@@ -11,7 +11,7 @@ Task List
     </thead>
     <tbody>
     <tr ng-repeat="task in tasks">
-        <td><a href="#task/<% task.slug %>"> <% task.title %> </a> </td>
+        <td><a href="#task/<% task.slug %>/edit"> <% task.title %> </a> </td>
         <td><% task.description %></td>
         <td><% task.created_by %></td>
         <td><% task.deadline %></td>
