sass link in progress

--- a/public/app/views/task.html
+++ b/public/app/views/task.html
@@ -1,24 +1,37 @@
-Task Detail
-<table class="table">
-    <thead>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Created By</th>
-        <th>Dead Line</th>
-        <th><button id="btn-add" class="btn btn-primary btn-xs" ng-click="toggle('add', 0)">Add New Task</button></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="task in tasks">
-        <td><a href="#task/<% task.slug %>/edit"> <% task.title %> </a> </td>
-        <td><% task.description %></td>
-        <td><% task.created_by %></td>
-        <td><% task.deadline %></td>
-        <td>
-            <button class="btn btn-default btn-xs btn-detail" ng-click="toggle('edit', task.id)">Edit</button>
-            <button class="btn btn-danger btn-xs btn-delete" ng-click="confirmDelete(task.id)">Delete</button>
-        </td>
-    </tr>
-    </tbody>
-</table>
+        <div class="well">
+            <div class="panel">
+                <div class="row">
+                    <div class="col-lg-4">
+                        Title
+                    </div>
+                    <div class="col-lg-8">
+                        <% task.title %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        Description
+                    </div>
+                    <div class="col-lg-8">
+                       <% task.description %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        Created By
+                    </div>
+                    <div class="col-lg-8">
+                        <% task.created_by %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        Dead Line
+                    </div>
+                    <div class="col-lg-8">
+                        <% task.deadline %>
+                    </div>
+                </div>
+
+            </div>
+        </div>
