--- a/public/app/views/tasks.html
+++ b/public/app/views/tasks.html
@@ -2,6 +2,7 @@ Task List
 <table class="table">
     <thead>
     <tr>
+        <th>ID</th>
         <th>Title</th>
         <th>Description</th>
         <th>Created By</th>
@@ -11,6 +12,7 @@ Task List
     </thead>
     <tbody>
     <tr ng-repeat="task in tasks">
+        <th><% task.id %></th>
         <td><a href="#task/<% task.slug %>"> <% task.title %> </a> </td>
         <td><% task.description %></td>
         <td><% task.created_by %></td>
