--- a/public/app/views/task.html
+++ b/public/app/views/task.html
@@ -1,37 +1,40 @@
+<div class="task-detail">
+
         <div class="well">
             <div class="panel">
                 <div class="row">
-                    <div class="col-lg-4">
-                        Title
+                    <div class="col-lg-2">
+                        <label>Title</label>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-10">
                         <% task.title %>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        Description
+                    <div class="col-lg-2">
+                        <label>Description</label>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-10">
                        <% task.description %>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        Created By
+                    <div class="col-lg-2">
+                        <label> Created By</label>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-10">
                         <% task.created_by %>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        Dead Line
+                    <div class="col-lg-2">
+                        <label> Due Date </label>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-10">
                         <% task.deadline %>
                     </div>
                 </div>
 
             </div>
         </div>
+</div>
