--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -39,7 +39,7 @@
                     <div class="form-group error">
                         <label for="inputEmail3" class="col-sm-3 control-label">Name</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control has-error" id="name" name="name" placeholder="Fullname" value="<%name%>"
+                            <input type="text" class="form-control has-error" id="name" name="name" placeholder="Fullname" modalstate="<%name%>"
                                    ng-model="employee.name" ng-required="true">
                                         <span class="help-inline"
                                               ng-show="frmEmployees.name.$invalid && frmEmployees.name.$touched">Name field is required</span>
