--- a/public/app/views/edit-task.html
+++ b/public/app/views/edit-task.html
@@ -44,14 +44,15 @@ Edit Task
 <% task.title %>
 <div ng-controller="HttpPutController">
     <h2>AngularJS Put request </h2>
-    <form ng-submit="UpdateData()">
+    <form>
+
         <p>Title:
             <input type="text" name="input" ng-model="task.title"
                    ng-pattern="example.word" required ng-trim="false">
             <input type="text" name="input" ng-model="task.id"
                    ng-pattern="example.word" required ng-trim="false">
         </p>
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" ng-click="updateTask(task)" />
         <hr />
         <% ServerResponse %>
     </form>
